--- a/views/index.html
+++ b/views/index.html
@@ -14,13 +14,13 @@
   <ul>
     <li><a href=# title="">world</a></li>
     <li><a href=# title="">tech</a></li>
-    <li><a href=# title="">business</a></li>
+    <li><a href="/newsington/business" title="">business</a></li>
   </ul>
 </nav>
 <div id="shadow-div"></div>
 
 
-<h1 id="title">latest news and stuff</h1>
+<h1 id="title">latest news and stuff from {{category}}</h1>
 <div id="index-parent-div">
 <div id="news-item-div">
 {{ #data }}
