--- a/views/update.html
+++ b/views/update.html
@@ -31,16 +31,16 @@
       <input type="text" id="lname" name="lname" value= {{lname}}></input><br/>
       <input type="password" id="passwordDigest" name="passwordDigest"></input>
     
-     <select id="favorite_source" name="favorite_source">
+     <select style="top: -30px; position: relative; left: -150px;" name="favorite_source">
      <option value="abc-news">ABC</option>
      <option value="associated-press">AP</option>
      <option value="bbc-news">BBC</option>
      <option value="the-guardian-uk">Guardian</option>
      <option value="google-news">Google</option>
-    </select>
-    <input id="id" type="hidden" id="id" name="id" value= {{id}}></input>
+    </select><br/>
+    <input id="update-button" type="hidden" id="id" name="id" value= {{id}}></input>
      {{/data}}
-      <input type="submit" value="submit"></input>
+      <input style="top: 82px;" type="submit" value="submit"></input>
     </form>
     
   </div>
