--- a/views/profile.html
+++ b/views/profile.html
@@ -14,9 +14,9 @@
 <nav>
   <h1 id="nav">Newsington News</h1>
   <ul>
-    <li><a href=# title="">world</a></li>
-    <li><a href=# title="">tech</a></li>
-    <li><a href=# title="">business</a></li>
+    <li><a href=/newsington/world title="">world</a></li>
+    <li><a href=/newsington/tech title="">tech</a></li>
+    <li><a href=/newsington/business title="">business</a></li>
     <li><a href=/newsington/users/update title="">update profile</a></li>
     <li><a href=/newsington/users/logout title="">logout</a></li>
   </ul>
@@ -25,24 +25,12 @@
 <div id="shadow-div"></div>
 
 
-<h1 id="source">latest news from {{ favorite }}</h1>
-<input id="news-source" type="hidden" value={{ favorite }}></input>
+<h1 style="font-size: 55pt; text-align: center;"> Welcome {{ fname }} {{ lname }}!</h1>
+<div id="profile-picture"></div>
 
-{{ #data }}
+<h1 id="source">latest news from <span id="fetch-this">{{ favorite }}</span></h1>
 
-<div id="newsdiv">
-  <div>
-    
-  </div>
-<h2>{{ title }}</h2>
 
-<img src="{{ urlToImage }}">
-
-<p>{{ description }}</p>
-
-{{ /data }}
-  <div>
-</div>
 
 
 
