--- a/views/fakenews.html
+++ b/views/fakenews.html
@@ -4,7 +4,7 @@
   <title>Newsington</title>
   <script src="/js/jquery.js"></script>
   <script src="/js/script.js"></script>
-  <link rel="stylesheet" type="text/css" href="/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow" rel="stylesheet">
 </head>
 <body style="font-family: 'Archivo Narrow', sans-serif;">
@@ -29,7 +29,7 @@
 
 
 
-<h1 id="title">latest news from {{category}}</h1>
+<h1 id="title">latest propaganda from {{category}}</h1>
 <div id="index-parent-div">
 
 {{ #data }}
@@ -45,7 +45,7 @@
 {{ /data }}
 </div>
 </div>
-<div id="footer">
+<div id="footer-fakenews">
 
   <h2 id="footer-header">Newsington News</h2>
   <div id="footer-social-media">
