--- a/views/profile.html
+++ b/views/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Profile</title>
   <script src="/js/jquery.js"></script>
   <script src="/js/script.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/style.css" />
@@ -13,27 +13,52 @@
 
 <nav>
   <h1 id="nav">Newsington News</h1>
+  </nav>
+  <nav style="height: 92px;">
   <ul>
-    <li><a href=/newsington/world title="">world</a></li>
-    <li><a href=/newsington/tech title="">tech</a></li>
-    <li><a href=/newsington/business title="">business</a></li>
-    <li><a href=/newsington/users/update title="">update profile</a></li>
-    <li><a href=/newsington/users/logout title="">logout</a></li>
-  </ul>
+    <li><a href="/newsington/topnews" title="">top news</a></li>
+    <li>
+    <li><a href="/newsington/us" title="">us</a></li>
+    <li><a href="/newsington/tech" title="">tech</a></li>
+    <li><a href="/newsington/business" title="">business</a></li>
+    <li><a href="/newsington/fakenews" title="">fake news</a></li>
+    <li><a href="/newsington/users/update" title="">update profile</a></li>
+    <li><a href="/newsington/users/logout" title="">logout</a></li>
+  </ul><h4 id=temp>{{temp}}&#186;f</h4><h5 id="city"><image id="weather-icon" src={{imgurl}}>New York, NY</h5>
 </nav>
 
-<div id="shadow-div"></div>
-
-
-<h1 style="font-size: 55pt; text-align: center;"> Welcome {{ fname }} {{ lname }}!</h1>
-<div id="profile-picture"></div>
-
-<h1 id="source">latest news from <span id="fetch-this">{{ favorite }}</span></h1>
 
 
 
+<h1 style="font-size: 5.3vw; text-align: center;"><div id="profile-picture"></div> Welcome {{ fname }} {{ lname }}!</h1>
 
 
+<h1 id="source">latest news from</h1> <h1 style="    text-align: center; margin-bottom: 28px;"><span id="fetch-this">{{ favorite }}</span></h1>
+
+
+
+<div id="footer-profile">
+
+  <h2 id="footer-header">Newsington News</h2>
+  <div id="footer-social-media">
+    <div id="twitter"></div>
+    <div id="insta"></div>
+    </div>
+  </div>
+
+  <div id="footer-links-profile">
+    
+    <li><a href="" title="">terms of service <span class="bullets"> &bull;</span></a></li>
+    <li><a href="" title="">about <span class="bullets"> &bull;</span></a></li>
+    <li><a href="" title="">privacy policy</a></li>
+    
+  </div>
+
+<div id=footer-bottom-text-profile><span>Newsington News</span><br>
+    COPYRIGHT &copy; 2018, Newsington Media. ALL RIGHTS RESERVED</div>
+  
+
+</div>
 
 </body>
 </html>
