removed console log

--- a/views/index2.html
+++ b/views/index2.html
@@ -83,7 +83,7 @@
 
   function detectScrollY(){
 
-    console.log(window.innerWidth, window.scrollY)
+    //console.log(window.innerWidth, window.scrollY)
 
     var nav = document.querySelectorAll('#nav');
     var navH1 = document.querySelectorAll('#nav h1');
