added News API reference

--- a/views/index2.html
+++ b/views/index2.html
@@ -58,7 +58,8 @@
     
   </div>
 
-<div id=footer-bottom-text><span>Newsington News</span><br>
+<div id=footer-bottom-text><span>Newsington News</span><br/>
+    <a href="https://newsapi.org" target="_blank">Powered by News API</a><br/>
     COPYRIGHT &copy; 2018, Newsington Media. ALL RIGHTS RESERVED</div>
   
 
