--- a/views/index.html
+++ b/views/index.html
@@ -61,6 +61,7 @@
   </div>
 
 <div id=footer-bottom-text><span>Newsington News</span><br>
+  <a href="https://newsapi.org" target="_blank">Powered by News API</a><br/>
     COPYRIGHT &copy; 2018, Newsington Media. ALL RIGHTS RESERVED</div>
   
 
